// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card styled components Apdex should render properly 1`] = `
.c0 {
  color: #4a4a4a;
  opacity: 62%;
  font-size: 13px;
  font-family: "Helvetica Bold";
  line-height: 19px;
  min-width: 22px;
}

<div
  className="c0"
/>
`;

exports[`Card styled components App should render properly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: "Helvetica Bold";
}

.c0:hover {
  cursor: pointer;
}

<div
  className="c0"
/>
`;

exports[`Card styled components Host should render properly 1`] = `
.c0 {
  font-size: 16px;
  font-family: "Helvetica Bold";
  color: #000000;
  line-height: 19px;
  margin-bottom: 23px;
}

<div
  className="c0"
/>
`;

exports[`Card styled components Name should render properly 1`] = `
.c0 {
  color: #4a4a4a;
  font-size: 16px;
  font-family: "Helvetica";
  line-height: 19px;
  margin-left: 10px;
}

<div
  className="c0"
/>
`;

exports[`Card styled components should apply styles according to passed props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 780px;
  min-width: 780px;
  max-width: 780px;
  padding: 30px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: white;
  margin-top: 30px;
  margin-left: 0px;
}

<div
  className="c0"
/>
`;
